--- a/config/default.toml
+++ b/config/default.toml
@@ -7,7 +7,7 @@ public_key = "certs/public_key.pem"
 private_key = "certs/private_key.pem"
 
 [mkm]
-base_url = "https://dev-mkmsp.mkm.id/h2hmkm"
+base_url = "https://dev-mkmsp.mkm.id"
 client_id = "test_banksultra"
 client_secret = "UbkWTQVyZyehGMtiLHP3M1AF0X548b32"
 timeout = 30000
